added linkedin and business email

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -22,3 +22,7 @@
   In case you wanna get in touch with me, just send an E-Mail to
   <a href="mailto:contact@joern-neumeyer.de">contact@joern-neumeyer.de</a>.
 </p>
+<p>
+  For Code Lake/business related topics, please send an E-Mail to <a href="mailto:neumeyer@code-lake.com">neumeyer@code-lake.com</a>
+  or write me on <a href="https://www.linkedin.com/in/joernneumeyer/" target="_blank" rel="noreferrer">LinkedIn</a>.
+</p>
