updated copyright notices

--- a/pages/copyright.html
+++ b/pages/copyright.html
@@ -68,6 +68,7 @@
       <td data-th="Source"><a href="https://github.com/joernneumeyer/joern-neumeyer.de" target="_blank" rel="noreferrer">GitHub</a></td>
       <td data-th="License"><a href="/LICENSE" target="_blank" rel="noreferrer">GPL-3.0-or-later</a></td>
       <td data-th="Info">
+        Copyright &copy; 2019 J&ouml;rn Neumeyer<br />
         This page has been implemented with plain HTML and JavaScript.
         All the corresponding source code may be used freely under the terms of the specified license.
       </td>
@@ -77,6 +78,7 @@
       <td data-th="Source"><a href="https://github.com/joernneumeyer/joern-neumeyer.de/tree/master/articles" target="_blank" rel="noreferrer">GitHub</a></td>
       <td data-th="License"><a href="https://creativecommons.org/licenses/by-sa/4.0/legalcode">CC-BY-SA-4.0</a></td>
       <td data-th="Info">
+        Copyright &copy; 2019 J&ouml;rn Neumeyer<br />
         The articles sub-directory contains all articles I wrote.
         They may be freely used under the terms of the specified license.
       </td>
@@ -86,6 +88,7 @@
       <td data-th="Source"><a href="https://github.com/sierra-library/sierra" target="_blank" rel="noreferrer">GitHub</a></td>
       <td data-th="License"><a href="https://github.com/sierra-library/sierra/blob/master/LICENSE.md" target="_blank" rel="noreferrer">GPL-2.0-or-later</a></td>
       <td data-th="Info">
+        Copyright &copy; Joan Claret and <a href="https://github.com/sierra-library/sierra/graphs/contributors">contributors</a>.<br />
         Sierra Library is a small, free SCSS library.
         All styling of this website is based on it.
         The minified file was added to this pages source code.
