updated contact page

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -19,10 +19,15 @@
 
 <p class="chapter-heading">Contact me</p>
 <p>
-  In case you wanna get in touch with me, just send an E-Mail to
+  In case you would like to get in touch with me, just send an E-Mail to
   <a href="mailto:contact@joern-neumeyer.de">contact@joern-neumeyer.de</a>.
 </p>
 <p>
   For Code Lake/business related topics, please send an E-Mail to <a href="mailto:neumeyer@code-lake.com">neumeyer@code-lake.com</a>
-  or write me on <a href="https://www.linkedin.com/in/joernneumeyer/" target="_blank" rel="noreferrer">LinkedIn</a>.
+  or text me on <a href="https://www.linkedin.com/in/joernneumeyer/" target="_blank" rel="noreferrer">LinkedIn</a>.
+</p>
+<p class="section-heading">Other online outlets</p>
+<p>
+  Basically all the code I write is available on <a href="https://github.com/joernneumeyer" target="_blank" rel="noreferrer">my GitHub Account</a>.
+  To actually see me working on my free-time projects or my newest university assignments, consider checking out <a href="https://www.twitch.tv/bitcrusherv2" target="_blank" rel="noreferrer">my Twitch streams</a>.
 </p>
