added initial loading of header module

--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
         Copyright &copy; 2019 J&ouml;rn Neumeyer
       </footer>
     </section>
-    <script type="text/javascript" src="scripts.js"></script>
-    <script type="text/javascript" src="header.js"></script>
+    <script type="module" src="header.js"></script>
   </body>
 </html>
