replaced web references to logos with local references

--- a/pages/copyright.html
+++ b/pages/copyright.html
@@ -26,10 +26,10 @@
 <p class="section-heading">
   Copyleft licensing
   <a href="https://www.gnu.org/licenses/gpl-3.0.html" target="_blank" rel="noreferrer">
-    <img class="valign-middle" src="https://www.gnu.org/graphics/gplv3-with-text-136x68.png" alt="GPL-3.0 logo" />
+    <img class="valign-middle" src="/img/gplv3-with-text-136x68.png" alt="GPL-3.0 logo" />
   </a>
   <a href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank" rel="noreferrer">
-    <img class="valign-middle" src="https://mirrors.creativecommons.org/presskit/buttons/88x31/svg/by-sa.svg" height="68" alt="CC BY-SA 4.0 logo" />
+    <img class="valign-middle" src="/img/by-sa.svg" height="68" alt="CC BY-SA 4.0 logo" />
   </a>
 </p>
 <p>
