--- a/pages/contact.html
+++ b/pages/contact.html
@@ -21,6 +21,8 @@
 <p>
   In case you would like to get in touch with me, just send an E-Mail to
   <a href="mailto:contact@joern-neumeyer.de">contact@joern-neumeyer.de</a>.
+  Would you like to chat private?
+  Encrypt your message with <a href="/assets/gpg.txt">my GPG Signature</a>.
 </p>
 <p>
   For Code Lake/business related topics, please send an E-Mail to <a href="mailto:neumeyer@code-lake.com">neumeyer@code-lake.com</a>
