updated some pages

--- a/pages/about.html
+++ b/pages/about.html
@@ -36,7 +36,7 @@
   year of middleschool.
   Back then, I was playing an online multiplayer game, which required you to
   either cheat or invest a significant amount of money.
-  Since I have not been willing to pay money for that game, I went for the cheating path.
+  Since I have neither been willing not able to pay money for that game, I went for the cheating path.
 </p>
 <p>
   As time went on, more and more of these cheats got detected.
