--- a/pages/code-projects.html
+++ b/pages/code-projects.html
@@ -33,11 +33,24 @@
     <tr>
       <th>Project Name</th>
       <th>Description</th>
-      <th>Repo</th>
+      <th>Links</th>
       <th>License</th>
     </tr>
   </thead>
   <tbody>
+    <tr>
+      <td>pipe7</td>
+      <td>
+        pipe7 is a PHP library for data processing. It focused on (and optimized for) memory efficiency.
+        It aims to be an alternative to PHP's native array functions (like array_map) and provide a consistent API.
+        In addition to the native functionality, pipe7 also allows you to process iterators without having to convert them to arrays first.
+      </td>
+      <td>
+        <a href="https://github.com/joernneumeyer/pipe7-php">GitHub</a>
+        <a href="https://docs.pipe7.joern-neumeyer.de/">Docs</a>
+      </td>
+      <td><a href="https://www.gnu.org/licenses/lgpl-3.0.en.html" target="_blank" rel="noreferrer">LGPL-3.0-or-later</a></td>
+    </tr>
     <tr>
       <td>LibrePages</td>
       <td>
