add more projects

--- a/pages/code-projects.html
+++ b/pages/code-projects.html
@@ -39,6 +39,35 @@
   </thead>
   <tbody>
     <tr>
+      <td>SocialStuff</td>
+      <td>
+        SocialStuff is a prototype for an end-to-end encrypted, decentralized communication network.
+        Its goal is to increase the soverignty of individuals and groups and make their communication secure and censorship resistent.
+        <strong>IMPORTANT!</strong>
+        Since this is just a prototype, using it with the intention of having properly secured communication channel is highly discouraged!
+        An improved version is currently in the making, but it will take some time for it to be finished.
+        Until then, please look for other alternatives.
+      </td>
+      <td>
+        <a href="https://github.com/socialstuff-org/socialstuff">GitHub</a>
+        <a href="https://github.com/socialstuff-org/report">Project Docs</a>
+      </td>
+      <td><a href="https://www.gnu.org/licenses/agpl-3.0.en.html" target="_blank" rel="noreferrer">AGPL-3.0-or-later</a></td>
+    </tr>
+    <tr>
+      <td>TinyScript</td>
+      <td>
+        TinyScript is my first (kind of) successful take on creating my own programming/scripting language.
+        As the name already suggests, the feature set is very limited.
+        Natively, only basic arithmetic operations and functions are supported.
+        However, it is easily extendible by adding some annotated Java classes, which TinyScript can bridge into.
+      </td>
+      <td>
+        <a href="https://github.com/joernneumeyer/tinyscript">GitHub</a>
+      </td>
+      <td><a href="https://www.gnu.org/licenses/gpl-3.0.en.html" target="_blank" rel="noreferrer">GPL-3.0-or-later</a></td>
+    </tr>
+    <tr>
       <td>pipe7</td>
       <td>
         pipe7 is a PHP library for data processing. It focused on (and optimized for) memory efficiency.
