update copyright year

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </noscript>
       </main>
       <footer class="center-text">
-        Copyright &copy; 2019 J&ouml;rn Neumeyer
+        Copyright &copy; 2019-2021 J&ouml;rn Neumeyer
       </footer>
     </section>
     <script type="module" src="header.js"></script>
